# TD5-TP2

./: .gitignore  CMakeLists.txt  README  README.md  debug_cw  debug_cw.cpp  my_vrp_solver  run.sh  test_Cliente  test_distance  test_distance.cpp
.devcontainer/: devcontainer.json
experiments/: graficos.ipynb  main_experiment.cpp  run_experiment.py
experiments/results/: output.csv
extras/: Diseño.txt
instancias/2l-cvrp-0/soluciones/: E045-04F.HRE  E051-05E.HRE  E072-04F.HRE  E076-07U.HRE  E076-08U.HRE  E076-10e_x.HRE  E076-14U.HRE  E101-08E.HRE  E101-10c_f.HRE  E101-10c_l.HRE  E101-14U.HRE  E121-07c_l1.HRE  E121-07c_l2.HRE  E121-07c_x.HRE  E135-07f_f.HRE  E135-07f_r.HRE  E151-12c.HRE  E200-17B.HRE  E200-17C.HRE
results/: output.csv
src/: CWwLocalSearch.cpp  CWwLocalSearch.h  Cliente.cpp  Cliente.h  GRASP.cpp  GRASP.h  HeuristicaClarkWright.cpp  HeuristicaClarkWright.h  HeuristicaClarkeWright.cpp  HeuristicaClarkeWright.h  HeuristicaInsercionCercana.cpp  HeuristicaInsercionCercana.h  OperadorRelocate.cpp  OperadorRelocate.h  OperadorSwap.cpp  OperadorSwap.h  Ruta.cpp  Ruta.h  Solucion.cpp  Solucion.h  VRPLIBReader.cpp  VRPLIBReader.h  main.cpp  my_vrp_solver  solver  tp
tests/: test_CWwLocalSearch.cpp  test_Cliente.cpp  test_HeuristicaClarkeWright.cpp  test_HeuristicaInsercionCercana.cpp  test_OperadorRelocate.cpp  test_OperadorSwap.cpp  test_Ruta.cpp  test_Solucion.cpp
